name:                   mokus-idioms
version:                0.002.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>

description:            Eclectic collection of things I have found useful

Library
  hs-source-dirs:       .
  exposed-modules:      Control.Concurrent.STM.Worker
                        Data.StateRef
                        Data.ReOrdMap
                        Data.PriorityQueue
                        Util.Misc
                        Util.STMIO
                        Util.ReOrd
  build-depends:        base >= 3, containers, haskell98, stm
