name:                   mokus-idioms
version:                0.4
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>

description:            Eclectic collection of things I have found useful

Library
  hs-source-dirs:       .
  exposed-modules:      Control.Concurrent.STM.Worker
                        Data.ToHex
                        Data.ToString
                        Util.Misc
                        Util.STMIO
  build-depends:        base >= 3, containers, haskell98, monad-loops, stateref, stm
