name:                   numerical-recipes
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <your email here>
maintainer:             James Cook <your email here>
license:                Unreleasable
homepage:               /dev/null

category:               Unclassified
synopsis:               Numerical Recipes, 3rd. Ed
description:            Transitional package containing implementations of
                        algorithms from Numerical Recipes (3rd ed.).  Some
                        are my own implementations, more or less independent
                        of the versions in the book, and so could be released,
                        but many are not.  Until they are disentangled and
                        the direct translations re-derived, this package 
                        cannot be released due to the license restrictions
                        in the book.

flag mtl
  Default:              True

Library
  hs-source-dirs:       src
                        ../../Haskell
  exposed-modules:      Functions.Trim
                        Math.Legendre
                        NR.Ch1.S4.Alias
                        NR.Ch1.S4.IMat
                        NR.Ch1.S4.IVec
                        NR.Ch1.S4.Linear
                        NR.Ch1.S4.MMat
                        NR.Ch1.S4.MVec
                        NR.Ch1.S4
                        NR.Ch17.Experiments
                        NR.Ch17.S0
                        NR.Ch17.S2
                        NR.Ch17.WebNote20
                        NR.Ch2.S1
                        NR.Ch2.S2
                        NR.Ch2.S3
                        NR.Ch2.S4.Banded
                        NR.Ch2.S4.Tridiagonal
                        NR.Ch2.S4
                        NR.Ch2.S8
                        NR.Ch3.S1
                        NR.Ch3.S2
                        NR.Ch3.S3
                        NR.Ch3.S5
                        NR.Ch3.S7.S4
                        NR.Ch3.S7.S4_V2
                        NR.Ch4.S2
                        NR.Ch4.S3
                        NR.Ch4.S4
                        NR.Ch4.S6
                        NR.Ch5.S2
                        NR.Ch5.S4
                        NR.Ch5.S6
                        NR.Ch5.S8
                        NR.Ch5.S9
                        NR.Ch6.S1
                        NR.Ch6.S2
                        NR.Ch9.S1
                        NR.Ch9.S2
                        NR.Ch9.S3
                        NR.Ch9.S4

  build-depends:        base == 4.*, 
                        containers == 0.3.*,
                        continued-fractions,
                        converge,
                        monad-loops == 0.3.*,
                        permutation == 0.4.*, 
                        polynomial,
                        pretty == 1.0.*,
                        primitive >= 0.2 && < 0.4,
                        stateref == 0.3.*,
                        vector >= 0.5 && < 0.7
  if flag(mtl)
    build-depends:      mtl == 1.1.*
  else
    build-depends:      transformers == 0.1.*, monads-fd == 0.1.*

