name:                   polynomial
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <your email here>
maintainer:             James Cook <your email here>
license:                Unspecified
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  ghc-options:          -Wall -fno-warn-name-shadowing
  hs-source-dirs:       src
  exposed-modules:      Math.Polynomial
                        Math.Polynomial.Bernstein
                        Math.Polynomial.Chebyshev
                        Math.Polynomial.Interpolation
                        Math.Polynomial.Lagrange
                        Math.Polynomial.Legendre
                        Math.Polynomial.Newton
                        Math.Polynomial.NumInstance
                        Math.Polynomial.Pretty
  other-modules:        Data.List.ZipSum
                        Math.Polynomial.Type
                        
  build-depends:        base >= 3 && <5, pretty, prettyclass, vector-space
