name:                   prim-uniq
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Data
synopsis:               Opaque unique identifiers in primitive state monads
description:            Opaque unique identifiers in primitive state monads 
                        and ad-hoc GADTs based on them.

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Unique.Prim
  build-depends:        base >= 3 && <5, primitive
