name:                   roots
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <your email here>
maintainer:             James Cook <your email here>
license:                Unspecified
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  ghc-options:          -Wall
  hs-source-dirs:       src
  exposed-modules:      Math.Root.Bracket
                        Math.Root.Finder
                        Math.Root.Finder.Bisection
                        Math.Root.Finder.Brent
                        Math.Root.Finder.FalsePosition
                        Math.Root.Finder.Newton
                        Math.Root.Finder.Ridders
                        Math.Root.Finder.Secant
                        
  build-depends:        base >= 3 && <5
