name:                   susie
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Modular IRC bot
description:            Modular IRC bot

Library
  hs-source-dirs:       src
  exposed-modules:      
  build-depends:        base >= 3, dependent-maps, dependent-sum, dyre
